# Real-time-sensor-encryption

./: README.md
crypto_pipeline/: CMakeLists.txt  package.xml
crypto_pipeline/src/pointcloud/AEGIS/: aegis_128.cpp  listener.cpp
crypto_pipeline/src/pointcloud/AEGIS_ARM/: talker.cpp
crypto_pipeline/src/pointcloud/ChaCha20/: listener.cpp  talker.cpp
crypto_pipeline/src/pointcloud/HC-128/: hc128.cpp  listener.cpp  talker.cpp
crypto_pipeline/src/pointcloud/HC-128-HMAC/: hmac.cpp  listener.cpp  talker.cpp
crypto_pipeline/src/pointcloud/Rabbit/: listener.cpp  rabbit.cpp  talker.cpp
crypto_pipeline/src/pointcloud/Rabbit-HMAC/: aes_cfb.cpp  listener.cpp  talker.cpp
crypto_pipeline/src/pointcloud/Sosemanuk/: listener.cpp  sosemanuk.h  talker.cpp
crypto_pipeline/src/pointcloud/aes_cfb/: aes_cfb.cpp  listener.cpp  talker.cpp  talker_cloud_4.cpp
crypto_pipeline/src/pointcloud/aes_cfb/prototypes/: listener_cloud.cpp  listener_cloud_3.cpp  talker_cloud.cpp  talker_cloud_3.cpp
crypto_pipeline/src/pointcloud/aes_cfb_ARM/: listener.cpp  talker.cpp
crypto_pipeline/src/pointcloud/no_encryption/: listener.cpp  talker.cpp
crypto_pipeline/src/video/AEGIS/: listener.cpp  talker.cpp
crypto_pipeline/src/video/ChaCha20/: listener.cpp  talker.cpp
crypto_pipeline/src/video/HC-128/: listener.cpp  listener_cloud_4.cpp  talker.cpp  talker_cloud_4.cpp
crypto_pipeline/src/video/HC-128-HMAC/: hc128.cpp  listener.cpp  sha-256.cpp  talker.cpp  talker_cloud_4.cpp
crypto_pipeline/src/video/HC-128-HMAC/prototypes/: listener_cloud_4.cpp
crypto_pipeline/src/video/Rabbit/: listener.cpp  talker.cpp
crypto_pipeline/src/video/Rabbit-HMAC/: listener.cpp  rabbit.cpp  talker.cpp
crypto_pipeline/src/video/Sosemanuk/: listener.cpp  serpent.cpp  talker.cpp
crypto_pipeline/src/video/Sosemanuk/prototypes/: listener.cpp
crypto_pipeline/src/video/aes_cfb/: aes_cfb.cpp  listener.cpp  talker.cpp
crypto_pipeline/src/video/aes_cfb_ARM/: listener.cpp  talker.cpp
crypto_pipeline/src/video/no_encryption/: talker.cpp
crypto_pipeline/src/video/no_encryption/prototypes/: listener.cpp
crypto_pipeline/src/video/prototypes/no_encryption/: listener.cpp  talker.cpp
crypto_pipeline/src/video/prototypes/no_encryption/prototypes/: talker.cpp
crypto_pipeline/src/video/prototypes/video_compression/: listener.cpp
crypto_pipeline/src/video/video_compression/: talker.cpp
crypto_pipeline/src/video/video_compression_encryption/: aes_cfb.cpp  listener.cpp  talker.cpp
crypto_pipeline/src/video/video_compression_encryption/AEGIS/: listener.cpp  talker.cpp
crypto_pipeline/src/video/video_compression_encryption/aes_cfb/: aes_cfb.h
doc/: nvidia_setup.txt
doc/figures/: sensor_encryption_pipeline4.eps
